split pgn unit and integration tests